# advent-of-code2024

./: Cargo.toml  README.md  fetch.sh  operations_graph.dot  run-release.sh  run.sh  template.rs
samples/: 15_3.txt
src/: lib.rs
